# FPortfolio

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  makefile  requirements.txt
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/about/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/backend/settings/: base.py  development.py  production.py
backend/projects/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: tsconfig.scripts.json
frontend/scripts/typescript/: analyze-types.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: categories.ts  config.ts  index.ts  jobs.ts  projects.ts  subcategories.ts  technologies.ts
frontend/src/components/: AnimatedAsciiArt.tsx  TerminalPortfolio.tsx
frontend/src/components/animations/: AnimatedAsciiArt.tsx
frontend/src/components/layout/: Terminal.tsx
frontend/src/components/ui/: CategoryHeader.tsx  index.ts  (+5 more)
frontend/src/constants/: terminal.ts
frontend/src/context/: TerminalProvider.tsx  terminalContext.ts
frontend/src/hooks/: useTerminal.ts
frontend/src/types/: api.ts  common.ts  contact.ts  index.ts  projects.ts  skills.ts  terminal.ts  work.ts
frontend/src/utils/: api.ts  cache.ts  errors.ts  terminal.ts  validation.ts
(+25 files in other folders)
